# hnh25_iac

./: .gitignore  README.md  ansible.cfg  pyproject.toml
ansible/: hosts  playbook.yml  requirements.yml
ansible/files/: .datapackage.json.kate-swp  datapackage.json  stages.yml  terms.md
ansible/files/staticfiles/: overwrites.css
ansible/group_vars/: group_vars.yml
ansible/tasks/: deploy_caddy.yml  deploy_dribdat.yml
ansible/templates/caddy/: Caddyfile.j2  docker-compose.yml.jinja
ansible/templates/dribdat/: .env.j2  docker-compose.yml.jinja
opentofu/: main.tf  meta.tf  variables.tf
opentofu/templates/: group_vars.tftpl  inventory.tftpl  user_data.tftpl
scripts/: add_users.py  process_userdata.py  recreate_user.py
